ajout du makefile pour faciliter la compilation

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -56,6 +56,7 @@ BASIC_TESTS =               \
 		test-lu             \
 		test-quasisep       \
 		test-sss            \
+		test-rrr            \
 		test-pluq-check     \
 		test-fsyrk          \
 		test-fsyr2k          \
@@ -116,6 +117,7 @@ test_rpm_SOURCES         = test-rpm.C
 test_lu_SOURCES              = test-lu.C
 test_quasisep_SOURCES              = test-quasisep.C
 test_sss_SOURCES               = test-sss.C
+test_rrr_SOURCES               = test-rrr.C
 test_det_SOURCES               = test-det.C
 test_pluq_check_SOURCES = test-pluq-check.C
 test_det_check_SOURCES = test-det-check.C
